# Voice-HRInterfaceBaxter

./: CMakeLists.txt  README.md  package.xml
scripts/: reader.txt
scripts/scripts/: call_back.py  call_back1.py  whole.py
